@@ -8,8 +8,12 @@ public class SparkConst {
 		File,Database;
 	} 
 	
-	public static final SparkSession MainSession=SparkSession.builder().appName("shk_WikiAnalyse").
-			config("spark.executor.extraJavaOptions","-verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps").getOrCreate();
+	public static final boolean RunOnLocal=true;
+	
+	public static final SparkSession MainSession=SparkSession.builder().appName("shk_WikiAnalyse").getOrCreate();
+	
+	/*public static final SparkSession LocalSession=SparkSession.builder().appName("shk_WikiAnalyse").master("local[3]").config("spark.executor.memory","3g").
+			config("spark.driver.memory","4g").getOrCreate();*/
 	
 	static{
 		JavaSparkContext javaSparkcontext=new JavaSparkContext(MainSession.sparkContext());
